--- a/config.js.sample
+++ b/config.js.sample
@@ -134,5 +134,11 @@ module.exports = {
         images: {
             compression: 5
         }
+    },
+    app: {
+        ga: {
+            id: 'UA-00000000-0',
+            name: 'mywebsite.com'
+        }
     }
 };
